minor template changes

--- a/templates/choose_game.html
+++ b/templates/choose_game.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<p>Welcome to the generic BRP character generator. Please choose your game system.</p>
-(list game systems)
-(list power levels if appropriate)
+<p>Welcome to the generic BRP character generator. Please choose your game.</p>
 <ul>
 {% for game in systems %}
 <li>{{ game['name'] }}</li>
